--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">prueba-desconecta</string>
+    <string name="app_name">Recuperart</string>
     <string name="welcome">Benvinguts a</string>
     <string name="colab">Amb la col·laboració de:</string>
     <string name="next">Següent</string>
