--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,9 @@
     <string name="mood">Choose Your Mood</string>
     <string name="mood_description">Theme is still able to be change \nunder in the settings</string>
     <string name="save">Save Now</string>
+    <string name="title_activity_elige">Elige</string>
+    <string name="tab_text_1">Museos</string>
+    <string name="tab_text_2">Código QR</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
