--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,31 +3,43 @@
     <string name="welcome">Benvinguts a</string>
     <string name="colab">Amb la col·laboració de:</string>
     <string name="next">Següent</string>
-    <string name="discover">Descobreix</string>
+    <string name="discover">DESCOBREIX</string>
     <string name="discover_description">"Passeja pel museu fins que t’hi sentis còmode.  Busca les diferents peces que et proposem i tria’n una.  "</string>
     <string name="chosen">Obra escollida:</string>
-    <string name="draw">Dibuixa</string>
+    <string name="draw">DIBUIXA</string>
     <string name="draw_description">Intenta dibuixar l’objecte que tens al davant, no et preocupar per la qualitat final, intenta-ho. Quan acabis fes-li una fotografia</string>
-    <string name="write">Escriu</string>
+    <string name="write">ESCRIU</string>
     <string name="write_description">Ara que coneixes l’objecte deixa anar la creativitat. Quines històries hi imagines?</string>
-    <string name="create">Crea</string>
-    <string name="revisit">Revisita</string>
+    <string name="create">CREA</string>
+    <string name="create_description">Estàs en un museu, i tu també pots crear una petita obra per emportar-te i recordar la visita. Posa a prova la teva habilitat i resol el següent puzzle.</string>
+    <string name="revisit">REVISITA</string>
     <string name="end">Finalitza</string>
     <string name="music1">associa</string>
-    <string name="concentrate_instructions">"Concentra't en l'objecte i escriu les emocions o els conceptes que et genera. "</string>
-    <string name="concentrate">Concentra\'t</string>
+    <string name="concentrate_instructions">Concentra\'t en l\'objecte i escriu les emocions o els conceptes que et genera. Quan escriguis una emoció, prem el botó vermell segons la importacia que li donis. Repeteix el procès fins que no se t\'acudeixin més i llavors clica el botó Següent per veure\'n el resultat</string>
+    <string name="concentrate">CONCENTRA\'T</string>
     <string name="instruction_assosiates">Concentra’t en l’objecte i escriu el títol de les cançons o la música que hi connectaries. Si vols tataraleja-les.</string>
-    <string name="associate">Associa</string>
+    <string name="associate">ASSOCIA</string>
     <string name="textHint">Escriu aquí</string>
     <string name="proveURL">Introdueix URL</string>
     <string name="httpResponse"> </string>
     <string name="scan">Escaneja el codi QR</string>
-    <string name="mood">Choose Your Mood</string>
-    <string name="mood_description">Theme is still able to be change \nunder in the settings</string>
-    <string name="save">Save Now</string>
+    <string name="mood">ESTAT D\'ÀNIM</string>
+    <string name="mood_description">Quin color identifica el teu estat d\'ànim actual?</string>
     <string name="title_activity_elige">Elige</string>
     <string name="tab_text_1">Museos</string>
     <string name="tab_text_2">Código QR</string>
+    <string name="title_activity_puzzle">Puzzle</string>
+    <string name="wordcloud_instructions">A continuació pots veure reflexades les emocions segons la seva importancia al Núvol de paraules. T\'ha sorprès el resultat?</string>
+    <string name="squareBreathe">RESPIRACIÓ DEL QUADRAT</string>
+    <string name="squareBreath_description">Busca una posició còmoda, és millor si pots seure però no és imprescindible. Posa les mans sobre els teus genolls o sobre l’abdomen, on les sentis més relaxades</string>
+    <string name="instruccio_primera">Clica al botó Següent quan estiguis llest</string>
+    <string name="title_activity_respiracio_accio">Respiracio_accio</string>
+    <string name="sbdescription">Clica al botó Comença quan estiguis llest. Repeteix aquest cicle de respiració les vegades que siguin necessàries fins que et sentis en estat de relaxació i, llavors, clica al botó Següent</string>
+    <string name="title_activity_avalua">AVALUA</string>
+    <string name="disconnect">DESCONNECTA</string>
+    <string name="disconnect_description">Observa l’obra d’art triada amb atenció. Desconnecta, concentra’t, situa’t, imagina’t. Respira.</string>
+    <string name="getWorldCloud">Genera WordCloud</string>
+    <string name="addtolist">AFEGEIX A LA LLISTA</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
