--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RecuperArt</string>
+    <string name="app_name" translatable="false">RecuperArt</string>
     <string name="welcome">Benvinguts a</string>
     <string name="colab">Amb la col·laboració de:</string>
     <string name="next">Següent</string>
@@ -7,7 +7,7 @@
     <string name="discover_description">"Passeja pel museu fins que t’hi sentis còmode.  Busca les diferents peces que et proposem i tria’n una.  "</string>
     <string name="chosen">Obra escollida:</string>
     <string name="draw">DIBUIXA</string>
-    <string name="draw_description">Intenta dibuixar l’objecte que tens al davant, no et preocupar per la qualitat final, intenta-ho. Quan acabis fes-li una fotografia</string>
+    <string name="draw_description">Intenta dibuixar l’objecte que tens al davant, no et preocupar per la qualitat final, intenta-ho. Quan acabis, clica sobre la següent animació per fer-li una fotografia</string>
     <string name="write">ESCRIU</string>
     <string name="write_description">Ara que coneixes l’objecte deixa anar la creativitat. Quines històries hi imagines?</string>
     <string name="create">CREA</string>
@@ -34,7 +34,7 @@
     <string name="squareBreath_description">Busca una posició còmoda, és millor si pots seure però no és imprescindible. Posa les mans sobre els teus genolls o sobre l’abdomen, on les sentis més relaxades</string>
     <string name="instruccio_primera">Clica al botó Següent quan estiguis llest</string>
     <string name="title_activity_respiracio_accio">Respiracio_accio</string>
-    <string name="sbdescription">Clica al botó Comença quan estiguis llest. Repeteix aquest cicle de respiració les vegades que siguin necessàries fins que et sentis en estat de relaxació i, llavors, clica al botó Següent</string>
+    <string name="sbdescription">Clica al botó blau quan estiguis llest. Repeteix aquest cicle de respiració les vegades que siguin necessàries fins que et sentis en estat de relaxació i, llavors, clica al botó Següent</string>
     <string name="title_activity_avalua">AVALUA</string>
     <string name="disconnect">DESCONNECTA</string>
     <string name="disconnect_description">Observa l’obra d’art triada amb atenció. Desconnecta, concentra’t, situa’t, imagina’t. Respira.</string>
