--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,13 +11,15 @@
     <string name="write">ESCRIU</string>
     <string name="write_description">Ara que coneixes l’objecte deixa anar la creativitat. Quines històries hi imagines?</string>
     <string name="create">CREA</string>
-    <string name="create_description">Estàs en un museu, i tu també pots crear una petita obra per emportar-te i recordar la visita. Posa a prova la teva habilitat i resol el següent puzzle.</string>
+    <string name="create_description">Estàs en un museu, i tu també pots crear una petita obra per recordar la visita. Posa a prova la teva habilitat i resol un dels següents puzzles.</string>
+    <string name="exit">Segur que vols sortir?</string>
     <string name="revisit">REVISITA</string>
     <string name="end">Finalitza</string>
     <string name="music1">associa</string>
     <string name="concentrate_instructions">Concentra\'t en l\'objecte i escriu les emocions o els conceptes que et genera. Quan escriguis una emoció, prem el botó vermell segons la importacia que li donis. Repeteix el procès fins que no se t\'acudeixin més i llavors clica el botó Següent per veure\'n el resultat</string>
     <string name="concentrate">CONCENTRA\'T</string>
-    <string name="instruction_assosiates">Concentra’t en l’objecte i escriu el títol de les cançons o la música que hi connectaries. Si vols tataraleja-les.</string>
+    <string name="instruction_assosiates">Concentra’t en l’objecte i escriu el títol de les cançons o la música que hi connectaries. Després, clica la tecla Enter/Envia al teu teclat per afegirla a la llista.</string>
+    <string name="instruction_assosiates_music">Clica sobre el génere musical que més s\'adeqüi a les cançons associades per escoltar una cançó</string>
     <string name="associate">ASSOCIA</string>
     <string name="textHint">Escriu aquí</string>
     <string name="proveURL">Introdueix URL</string>
@@ -29,6 +31,7 @@
     <string name="tab_text_1">Museus</string>
     <string name="tab_text_2">Codi QR</string>
     <string name="title_activity_puzzle">Puzzle</string>
+    <string name="wordcloud">NÚVOL DE PARAULES</string>
     <string name="wordcloud_instructions">A continuació pots veure reflexades les emocions segons la seva importancia al Núvol de paraules. T\'ha sorprès el resultat?</string>
     <string name="squareBreathe">RESPIRACIÓ DEL QUADRAT</string>
     <string name="squareBreath_description">Busca una posició còmoda, és millor si pots seure però no és imprescindible. Posa les mans sobre els teus genolls o sobre l’abdomen, on les sentis més relaxades</string>
@@ -44,4 +47,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="open">Obrir</string>
     <string name="close">Tancar</string>
+    <string name="horrah">Horrahh!</string>
+    <string name="nav_view_title">RecuperART</string>
 </resources>
